syntax = "proto2";

package api;

option go_package = "examples/otel-trace-grpc/api";

message UserGetInput {
	required string Name = 1;
}

message User {
	required string Name = 1;
}

service Service {
	rpc GetUserV1(UserGetInput) returns (User) {
	}
	rpc GetUserV2(UserGetInput) returns (User) {
	}
	rpc GetUserV3(UserGetInput) returns (User) {
	}
}
